--- a/.gitignore
+++ b/.gitignore
@@ -165,3 +165,13 @@ venv.bak/
 # mypy
 .mypy_cache/
 
+/test/newstest2017-deen-ref.en.sgm
+/test/newstest2016-ende-src.en.sgm
+/test/newstest2015-ende-src.en.sgm
+/test/newstest2016-ende-ref.de.sgm
+/test/newstest2015-ende-ref.de.sgm
+/test/newstest2017-deen-src.de.sgm
+/test/dev.tgz
+/test/logs/
+/test/data/
+/test/saves/
